--- a/UnADM/universidadPOO3/DPO3_U1_A2_RARP/src/dialog/ConfimarSalir.form
+++ b/UnADM/universidadPOO3/DPO3_U1_A2_RARP/src/dialog/ConfimarSalir.form
@@ -87,7 +87,7 @@
         <Component class="javax.swing.JButton" name="btnAceptar">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="0" red="ff" type="rgb"/>
+              <Color blue="33" green="99" red="0" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="14" style="1"/>
